--- a/app/views/processGubun/index.jade
+++ b/app/views/processGubun/index.jade
@@ -30,21 +30,21 @@ block content
                                         button.btn.btn-primary(id='searchBtn' type='button') 조회
                 .row
                     .col-sm-12
+                        .btn-toolbar.form-group
+                            .pull-left
+                                a.btn.btn-primary.waves-effect.waves-light.m-l-5(href='/processGubun/new')
+                                    i.fa.fa-edit
+                                    |  추가
                         .card-box
-                            .btn-toolbar.form-group
-                                .pull-left
-                                    a.btn.btn-primary.waves-effect.waves-light.m-l-5(href='/processGubun/new')
-                                        i.fa.fa-edit
-                                        |  추가
                             table.table.table-hover(id='dvData' data-tablesaw-mode='swipe')
                                 thead
                                     tr
                                         //th(width='15%') 상위업무
-                                        th(width='20%') 처리구분명
-                                        th 설명
-                                        th(width='10%') 등록자
-                                        th(width='10%') 등록일
-                                        th(width='10%') 사용
+                                        th.text-center(width='30%') 처리구분명
+                                        th.text-center 설명
+                                        th.text-center(width='10%') 등록자
+                                        th.text-center(width='10%') 등록일
+                                        th.text-center(width='10%') 사용
                                 tbody(id='more_list')
                         .row
                             .col-sm-4
