--- a/app/views/company/edit.jade
+++ b/app/views/company/edit.jade
@@ -1,36 +1,16 @@
 extends ../layouts/default
 block head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width,initial-scale=1')
-    meta(name='description', content='A fully featured admin theme which can be used to build CRM, CMS, etc.')
-    meta(name='author', content='Coderthemes')
-    link(rel='shortcut icon', href='assets/images/favicon_1.ico')
-    title 4-3 회사정보 입력
-    link(href='/plugins/dropzone/dist/dropzone.css', rel='stylesheet', type='text/css')
-    link(href='/plugins/summernote/dist/summernote.css', rel='stylesheet')
-    link(href='/plugins/switchery/switchery.min.css', rel='stylesheet')
-    link(href='/assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
-    link(href='/assets/css/core.css', rel='stylesheet', type='text/css')
-    link(href='/assets/css/icons.css', rel='stylesheet', type='text/css')
-    link(href='/assets/css/components.css', rel='stylesheet', type='text/css')
-    link(href='/assets/css/pages.css', rel='stylesheet', type='text/css')
-    link(href='/assets/css/menu_light.css', rel='stylesheet', type='text/css')
-    link(href='/assets/css/responsive.css', rel='stylesheet', type='text/css')
-    script(src='/assets/js/modernizr.min.js')
-    // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
-    // WARNING: Respond.js doesn't work if you view the page via file://
-    //if lt IE 9
-    script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
-    script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
-
-    // postcode
-    script(src='/isu/js/postcode.js')
-    //http용
-    script(src='http://dmaps.daum.net/map_js_init/postcode.v2.js')
 
     //datepicker 추가
     script(src='/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
     script(src='/isu/js/search/datepicker.js', type='text/javascript')
+
+    //postcode
+    script(src='/isu/js/postcode.js')
+    
+    //http용
+    script(src='http://dmaps.daum.net/map_js_init/postcode.v2.js')
+
 
 block content
     .content-page
@@ -52,25 +32,18 @@ block content
                             .p-20
                                 .btn-toolbar.form-group
                                     form.form-horizontal.group-border-dashed(name='form' action='/company/#{company._id}/edit' method='post')
-                                        .pull-left
-                                            button.btn.btn-default.waves-effect.waves-light.m-l-5(onclick="location.href='/company/list'")
-                                                i.fa.fa-list-ul
-                                                |  목록
-                                            button.btn.btn-success.waves-effect.waves-light.m-l-5(onclick="location.href='/company/#{company._id}/edit'") 
-                                                i.fa.fa-edit
-                                                |  수정
-                                            button.btn.btn-inverse.waves-effect.waves-light.m-l-5(onclick="location.href='/company/#{company._id}/delete'" id="deleteBtn") 
-                                                i.fa.fa-remove
-                                                |  삭제
-                                        .pull-right
-                                            button.btn.btn-primary.waves-effect.waves-light(type='submit')
-                                                i.fa.fa-send-o
-                                                |  저장
-                                            button.btn.btn-default.waves-effect.m-l-5(type='reset') 
-                                                i.fa.fa-undo
-                                                |  취소
-                                        br
-                                        br
+                                        .form-group
+                                            .pull-left
+                                                .btn.btn-primary.waves-effect.waves-light.m-l-5(onclick="location.href='/company'")
+                                                    i.fa.fa-list-ul
+                                                    |  목록
+                                                .btn.btn-inverse.waves-effect.waves-light.m-l-5(onclick="location.href='/company/#{company._id}/delete'") 
+                                                    i.fa.fa-remove
+                                                    |  삭제
+                                            .pull-right
+                                                button.btn.btn-primary(type='submit')
+                                                    i.fa.fa-send-o
+                                                    |  저장
                                         hr
                                         .form-group
                                             label.col-sm-3.control-label 회사코드
@@ -124,10 +97,3 @@ block content
                                                     input.form-control(id='date_to', name='company[date_to]', type='text', placeholder='yyyy-mm-dd', value='#{company.date_to}')
                                                     span.input-group-addon.bg-primary.b-0.text-white
                                                         i.ion-calendar 
-
-        footer.footer.text-right
-            | 2017 © ISU Group.
-    // ==============================================================
-    // End Right content here
-    // ==============================================================
-    // END wrapper
