--- a/app/views/company/new.jade
+++ b/app/views/company/new.jade
@@ -1,28 +1,5 @@
 extends ../layouts/default
 block head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width,initial-scale=1')
-    meta(name='description', content='A fully featured admin theme which can be used to build CRM, CMS, etc.')
-    meta(name='author', content='Coderthemes')
-    link(rel='shortcut icon', href='assets/images/favicon_1.ico')
-    title 4-3 회사정보 입력
-    link(href='/plugins/dropzone/dist/dropzone.css', rel='stylesheet', type='text/css')
-    link(href='/plugins/summernote/dist/summernote.css', rel='stylesheet')
-    link(href='/plugins/switchery/switchery.min.css', rel='stylesheet')
-    link(href='/assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
-    link(href='/assets/css/core.css', rel='stylesheet', type='text/css')
-    link(href='/assets/css/icons.css', rel='stylesheet', type='text/css')
-    link(href='/assets/css/components.css', rel='stylesheet', type='text/css')
-    link(href='/assets/css/pages.css', rel='stylesheet', type='text/css')
-    link(href='/assets/css/menu_light.css', rel='stylesheet', type='text/css')
-    link(href='/assets/css/responsive.css', rel='stylesheet', type='text/css')
-    script(src='/assets/js/modernizr.min.js')
-    // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
-    // WARNING: Respond.js doesn't work if you view the page via file://
-    //if lt IE 9
-    script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
-    script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
-
     // postcode
     script(src='/isu/js/postcode.js')
     
@@ -52,6 +29,16 @@ block content
                         .card-box
                             .p-20
                                 form.form-horizontal.group-border-dashed(name='form' action='/company/new' method='post')
+                                    .form-group
+                                        .pull-left
+                                            .btn.btn-primary.waves-effect.waves-light.m-l-5(onclick="location.href='/company'")
+                                                i.fa.fa-list-ul
+                                                |  목록
+                                        .pull-right
+                                            button.btn.btn-primary(type='submit')
+                                                i.fa.fa-send-o
+                                                |  저장
+                                    hr
                                     .form-group
                                         label.col-sm-3.control-label 회사코드
                                         .col-sm-3
@@ -104,17 +91,3 @@ block content
                                                 input.form-control(id='date_to', name='company[date_to]', type='text', placeholder='yyyy-mm-dd', value='')
                                                 span.input-group-addon.bg-primary.b-0.text-white
                                                     i.ion-calendar 
-                                    .form-group
-                                        .col-sm-offset-3.col-sm-9.m-t-30
-                                            button.btn.btn-primary.waves-effect.waves-light(type='submit')
-                                                i.fa.fa-send-o
-                                                |  저장
-                                            button.btn.btn-default.waves-effect.m-l-5(type='reset') 취소
-        footer.footer.text-right
-            | 2017 © ISU Group.
-    // ==============================================================
-    // End Right content here
-    // ==============================================================
-    // END wrapper
-
-
