--- a/app/views/layouts/deptadmin.jade
+++ b/app/views/layouts/deptadmin.jade
@@ -148,7 +148,7 @@ html
                   li
                     a(href='/lowerProcess/') 하위업무조회
                   li
-                    a(href='/company/list')
+                    a(href='/company/')
                       | 회사정보관리(외부) 
                       //i.fa.fa-circle-o.text-pink.m-l-5
                   li
