#PSW - POSTCODE 크롬 오류

--- a/app/views/company/edit.jade
+++ b/app/views/company/edit.jade
@@ -27,6 +27,8 @@ block head
     script(src='/isu/js/postcode.js')
     //http용
     script(src='http://dmaps.daum.net/map_js_init/postcode.v2.js')
+    script(src='https://spi.maps.daum.net/imap/map_js_init/postcode.v2.js')
+
 
     //datepicker 추가
     script(src='/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
