--- a/app/views/search/mng_list.jade
+++ b/app/views/search/mng_list.jade
@@ -13,6 +13,8 @@ block head
     link(href='/assets/css/menu_light.css', rel='stylesheet', type='text/css')
     link(href='/assets/css/responsive.css', rel='stylesheet', type='text/css')
 
+
+
     //첨부파일
     link(href='/vendor/fileupload/css/fileinput.css', media='all', rel='stylesheet', type='text/css')
 
@@ -140,7 +142,8 @@ block content
                                         th(class='text-center') 제목
                                         th(class='text-center' width='8%') 요청자
                                         th(class='text-center' width='13%') 등록일
-                                        th(class='text-center' width='10%') 진행상태
+                                        th(class='text-center' width='9%') 진행상태
+                                        th(class='text-center' width='14%') 만족도
                                         //th(class='text-center' width='8%') 담당자
                                         //th(class='text-center' width='14%') 접수(완료일)
                                 tbody(id='more_list')
