--- a/app/views/company/new.jade
+++ b/app/views/company/new.jade
@@ -5,6 +5,7 @@ block head
     
     //http용
     script(src='http://dmaps.daum.net/map_js_init/postcode.v2.js')
+    script(src='https://spi.maps.daum.net/imap/map_js_init/postcode.v2.js')
 
     //datepicker 추가
     script(src='/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
