--- a/app/views/usermanage/index.jade
+++ b/app/views/usermanage/index.jade
@@ -57,7 +57,8 @@ block content
                                         i.fa.fa-edit
                                         |  추가
                         .card-box
-                            table.table.table-bordered
+                            //table.table.table-bordered
+                            table.table.table-hover
                                 thead
                                     tr
                                         th.text-center 회사명
