--- a/app/views/usermanageAccess/edit.jade
+++ b/app/views/usermanageAccess/edit.jade
@@ -31,11 +31,17 @@ block content
                             .p-20
                                 form.form-horizontal.group-border-dashed(id='usermanageAccessForm' name='form' action='/usermanageAccess/edit/#{usermanageAccess._id}' method='post')
                                     .form-group
-                                        .row
-                                            .col-xs-12.col-sm-12.col-md-12
-                                                .btn.btn-primary.btn-signup(onclick="location.href='/usermanageAccess'") 목록
-                                                .btn.btn-primary.btn-danger(onclick="location.href='/usermanageAccess/delete/#{usermanageAccess._id}'") 삭제
-                                                button.btn.btn-success.btn-md(type='submit') 저장
+                                        .pull-left
+                                            .btn.btn-primary.waves-effect.waves-light.m-l-5(onclick="location.href='/usermanageAccess'")
+                                                i.fa.fa-list-ul
+                                                |  목록
+                                            .btn.btn-inverse.waves-effect.waves-light.m-l-5(onclick="location.href='/usermanageAccess/delete/#{usermanageAccess._id}'") 
+                                                i.fa.fa-remove
+                                                |  삭제
+                                        .pull-right
+                                            button.btn.btn-primary(type='submit')
+                                                i.fa.fa-send-o
+                                                |  저장
                                     hr
                                     .form-group
                                         .row
