--- a/app/views/usermanageAccess/index.jade
+++ b/app/views/usermanageAccess/index.jade
@@ -45,7 +45,7 @@ block content
                                         button.btn.btn-primary(id='searchBtn' type='button') 조회
                 .row
                     .col-sm-12
-                        .btn-toolbar.form-group
+                        //.btn-toolbar.form-group
                                 .pull-left
                                     a.btn.btn-primary.waves-effect.waves-light.m-l-5(onclick='allAccess()')
                                         i.fa.fa-check-square-o
