--- a/app/views/layouts/deptadmin.jade
+++ b/app/views/layouts/deptadmin.jade
@@ -144,7 +144,7 @@ html
                   span.menu-arrow
                 ul.list-unstyled
                   li
-                    a(href='/higherProcess/list') 상위업무조회
+                    a(href='/higherProcess/') 상위업무조회
                   li
                     a(href='/lowerProcess/') 하위업무조회
                   li
