--- a/app/views/usermanageAccess/index.jade
+++ b/app/views/usermanageAccess/index.jade
@@ -51,7 +51,8 @@ block content
                                         i.fa.fa-check-square-o
                                         |  전체 승인
                         .card-box
-                            table.table.table-bordered
+                            //table.table.table-bordered
+                            table.table.table-hover
                                 thead
                                     tr
                                         th.text-center 회사명
