--- a/app/views/oftenqna/new.jade
+++ b/app/views/oftenqna/new.jade
@@ -23,6 +23,10 @@ block content
                 .row
                     .col-sm-12
                         .btn-toolbar.m-t-10(role='toolbar')
+                            .pull-left
+                                .btn.btn-primary.waves-effect.waves-light.m-l-5(onclick="location.href='/oftenqna'")
+                                    i.fa.fa-list-ul
+                                    |  목록
                             .pull-right
                                 button#saveBtn.btn.btn-primary.waves-effect.waves-light.m-r-5(type='button')
                                     span 저장
