--- a/app/views/processGubun/new.jade
+++ b/app/views/processGubun/new.jade
@@ -29,11 +29,8 @@ block content
                                             .btn.btn-primary.waves-effect.waves-light.m-l-5(onclick="location.href='/processGubun'")
                                                 i.fa.fa-list-ul
                                                 |  목록
-                                            .btn.btn-purple.waves-effect.waves-light.m-l-5(onclick="location.href='/processGubun'")
-                                                i.fa.fa-undo
-                                                |  취소
                                         .pull-right
-                                            button.btn.btn-info(type='submit')
+                                            button.btn.btn-primary(type='submit')
                                                 i.fa.fa-send-o
                                                 |  저장
                                     .form-group(style='display:none')
