--- a/app/views/search/mng_list.jade
+++ b/app/views/search/mng_list.jade
@@ -156,7 +156,7 @@ block content
                                     |  /
                                     |  총
                                     &nbsp;
-                                    span(id='totalCnt2')
+                                    span(id='totalCnt')
                                     |  건 
                                
                             .col-sm-8
