#KSY 사용자 마이페이지 추가

--- a/app/views/layouts/user.jade
+++ b/app/views/layouts/user.jade
@@ -65,8 +65,12 @@ html
                     i.fa.fa-search
               ul.nav.navbar-nav.navbar-right.pull-right
                 li.hidden-xs
-                  a.waves-effect.waves-light(href='/logout')
+                  a.waves-effect.waves-light(href='/usermanage/myPage')
                     i.md.md-account-circle
+                    |  마이페이지
+                li.hidden-xs
+                  a.waves-effect.waves-light(href='/logout')
+                    i.md.md-settings-power
                     |  로그아웃
             // /.nav-collapse
       // Top Bar End
