#LHI model Date -> String 으로 변경

--- a/app/views/usermanage/edit.jade
+++ b/app/views/usermanage/edit.jade
@@ -78,7 +78,7 @@ block content
                                                     .form-group
                                                         label.col-sm-2.control-label 비밀번호
                                                         .col-sm-9
-                                                            input.form-control(name='usermanage[password]' type='password' value='#{usermanage.password}')
+                                                            input.form-control(name='usermanage[password]' type='password' value='' placeholder='********')
                                                     .form-group
                                                         label.col-sm-2.control-label 사원명
                                                         .col-sm-9
