#PSW 처리진행현황 페이지 수정

--- a/app/views/layouts/user.jade
+++ b/app/views/layouts/user.jade
@@ -35,7 +35,7 @@ html
       // <div id="wrapper" class="enlarged forced">
       // // max-width 767px 또는 mobile device 일때 enlarged class 필요 //
       //- if(session.group_flag =="in" && session.user_flag != null){
-      - if(session.user_flag != null){
+      //- if(session.user_flag != null){
       // Top Bar Start
       .topbar
         // LOGO
@@ -74,7 +74,7 @@ html
                     |  로그아웃
             // /.nav-collapse
       // Top Bar End
-      - } 
+      //- } 
       // ========== Left Sidebar Start ==========
       .left.side-menu
         .sidebar-inner.slimscrollleft
