--- a/app/views/statistic/status_list.jade
+++ b/app/views/statistic/status_list.jade
@@ -1,171 +1,10 @@
 extends ../layouts/default
 block head
     title  3-6 처리구분별처리내역
-    // Plugins css
-    link(href='../plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.css', rel='stylesheet')
-    link(href='../plugins/multiselect/css/multi-select.css', rel='stylesheet', type='text/css')
-    link(href='../plugins/select2/select2.css', rel='stylesheet', type='text/css')
-    link(href='../plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.css', rel='stylesheet')
-    link(href='../plugins/timepicker/bootstrap-timepicker.min.css', rel='stylesheet')
-    link(href='../plugins/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css', rel='stylesheet')
-    link(href='../plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css', rel='stylesheet')
-    link(href='../plugins/bootstrap-daterangepicker/daterangepicker.css', rel='stylesheet')
-    link(href='../plugins/switchery/switchery.min.css', rel='stylesheet')
-    link(href='assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/core.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/icons.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/components.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/pages.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/menu_light.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/responsive.css', rel='stylesheet', type='text/css')
-    script(src='assets/js/modernizr.min.js')
-    // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
-    // WARNING: Respond.js doesn't work if you view the page via file://
-    //if lt IE 9
-    script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
-    script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
-    script(src='assets/js/jquery.core.js')
-    script(src='assets/js/jquery.app.js')
-
-    script(src='/vendor/jquery/jquery.min.js')
-
+    
 block content
-    .content-page
-        .content
-            .container
-                .row
-                    .col-sm-12
-                        .page-title-box
-                            ol.breadcrumb.pull-right
-                                li
-                                    a(href='#') Home
-                                li
-                                    a(href='#') SD 검색/통계
-                                li.active 처리구분별 처리내역
-                            h4.page-title 처리구분별 처리내역
-                .row
-                    .col-lg-12
-                        .card-box.m-t-10
-                            form.form-horizontal.group-border-dashed(action='#')
-                                .form-group
-                                    label.col-sm-2.control-label 검색년도
-                                    .col-sm-2
-                                        select.form-control
-                                            option 2012
-                                            option 2013
-                                            option 2014
-                                            option 2015
-                                            option 2016
-                                            option(selected='') 2017
-                                            option 2018
-                                            option 2019
-                                            option 2020
-                                            option 2021
-                                .form-group
-                                    label.col-sm-2.control-label 회사별
-                                    .col-sm-2
-                                        select.form-control
-                                            option 선택하지않음
-                                            option(selected='') 이수시스템
-                                            option 주이수
-                                            option 이수건설
-                                            option 항목2
-                                            option 항목3
-                                            option 항목4
-                                            option 항목5
-                                    label.col-sm-2.control-label 상위업무
-                                    .col-sm-2
-                                        select.form-control
-                                            option 전체
-                                            option 항목1
-                                            option 항목2
-                                            option 항목3
-                                            option 항목4
-                                            option 항목5
-                                    .col-sm-2
-                                        button.btn.btn-primary(type='button')
-                                            i.fa.fa-search.m-r-5
-                                            | 조회
-                .row
-                    .col-lg-12
-                        .card-box
-                            table.table.table-bordered
-                                thead
-                                    tr
-                                        th.font-12(width='5%') 월
-                                        th.font-12(width='20%') 상위업무
-                                        th.font-12(width='') 하위업무
-                                        th.font-12(width='10%') 접수건수
-                                        th.font-12(width='10%') 해결건수
-                                        th.font-12(width='10%') 해결률(%)
-                                        th.font-12(width='10%') 평점
-                                tbody
-                                    tr
-                                        th.valign-middle.text-primary(scope='row', rowspan='9')
-                                            b 01
-                                        td.valign-middle(rowspan='2') 계정관리
-                                        td E-MAIL 계정관리
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr.bg-muted
-                                        td 소 계
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr
-                                        td.valign-middle(rowspan='6') 그룹웨어
-                                        td 전자결재
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr
-                                        td 공통기능
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr
-                                        td 이메일
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr
-                                        td 문서관리
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr
-                                        td 게시판
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr.bg-muted
-                                        td 소 계
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr.bg-primary10
-                                        td.text-center(colspan='2') 월 계
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    //
-                                        <tr class="bg-primary10 border-top">
-                                        <td colspan="2" class="text-center text-primary"><b>합 계</b></td>
-                                        <td class="text-primary"><b>6528</b></td>
-                                        <td class="text-primary"><b>133</b></td>
-                                        <td class="text-primary"><b>6121</b></td>
-                                        <td class="text-primary"><b>3</b></td>
-                                        <td class="text-primary"><b>97.8</b></td>
-                                        <td class="text-primary"><b>4.4</b></td>
-                                        </tr>
+    div
+        | status_content
 block footer
+    div 
+        | status_footer
